added new content

--- a/index.html
+++ b/index.html
@@ -276,12 +276,14 @@
                     </div>
                 </div>
                 <div class="rigth__content">
-
+                    <img src="img/example/Line Chart 1.png" alt="img">
                 </div>
             </div>
         </div>
     </div>
+    <div id="map" class="map">
 
+    </div>
     <script src="main.js"></script>
 </body>
 
