--- a/index.html
+++ b/index.html
@@ -281,10 +281,57 @@
             </div>
         </div>
     </div>
-    <div id="map" class="map">
 
-    </div>
+    <div id="map"></div>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <div class="footer__nav">
+                    <ul class="footer__nav-left">
+                        <h1>Product</h1>
+                        <li>Overview</li>
+                        <li>Features</li>
+                        <li>Roadmap</li>
+                        <li>Pricing</li>
+                    </ul>
+                    <ul class="footer__nav-middle">
+                        <h1>About</h1>
+                        <li>Overview</li>
+                        <li>Team</li>
+                        <li>Vacancy Jobs</li>
+                        <li>Awards</li>
+                    </ul>
+                    <ul class="footer__nav-right">
+                        <h1>Contact</h1>
+                        <li>Head Office</li>
+                        <li>Subsidiaries</li>
+                        <li>Support</li>
+                        <li>Feedback</li>
+                    </ul>
+                </div>
+                <div class="footer__info">
+                    <div class="footer__info-location">
+                        <a href="#"><img src="img/footer/location.svg" alt="location"></a>
+                        <p>65806 Briarwood Road San Francisco CA</p>
+                    </div>
+                    <div class="footer__info-phone">
+                        <a href="4178651442"><img src="img/footer/phone.svg" alt="phone"></a>
+                        <p>417-865-1442</p>
+                    </div>
+                    <div class="footer__info-socials">
+                        <a href="#"><img src="img/footer/twitter.svg" alt="twitter"></a>
+                        <a href="#"><img src="img/footer/facebook.svg" alt="facebook"></a>
+                        <a href="#"><img src="img/footer/linkedin.svg" alt="linkedin"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="main.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvAvP2OrMlyeJQI-FFpAo6WyE71vKkdyg&callback=initMap"></script>
+
 </body>
 
 </html>
