full completed desktop version of site

--- a/index.html
+++ b/index.html
@@ -288,27 +288,33 @@
         <div class="container">
             <div class="footer__content">
                 <div class="footer__nav">
-                    <ul class="footer__nav-left">
+                    <div class="footer__nav-left">
                         <h1>Product</h1>
-                        <li>Overview</li>
-                        <li>Features</li>
-                        <li>Roadmap</li>
-                        <li>Pricing</li>
-                    </ul>
-                    <ul class="footer__nav-middle">
+                        <ul>
+                            <a href="#"><li>Overview</li></a>
+                            <a href="#"><li>Features</li></a>
+                            <a href="#"><li>Roadmap</li></a>
+                            <a href="#"><li>Pricing</li></a>
+                        </ul>
+                    </div>
+                    <div class="footer__nav-middle">
                         <h1>About</h1>
-                        <li>Overview</li>
-                        <li>Team</li>
-                        <li>Vacancy Jobs</li>
-                        <li>Awards</li>
-                    </ul>
-                    <ul class="footer__nav-right">
+                        <ul>
+                            <a href="#"><li>Overview</li></a>
+                            <a href="#"><li>Team</li></a>
+                            <a href="#"><li>Vacancy Jobs</li></a>
+                            <a href="#"><li>Awards</li></a>
+                        </ul>
+                    </div>
+                    <div class="footer__nav-right">
                         <h1>Contact</h1>
-                        <li>Head Office</li>
-                        <li>Subsidiaries</li>
-                        <li>Support</li>
-                        <li>Feedback</li>
-                    </ul>
+                        <ul>
+                            <a href="#"><li>Head Office</li></a>
+                            <a href="#"><li>Subsidiaries</li></a>
+                            <a href="#"><li>Support</li></a>
+                            <a href="#"><li>Feedback</li></a>
+                        </ul>
+                    </div>
                 </div>
                 <div class="footer__info">
                     <div class="footer__info-location">
