--- a/index.html
+++ b/index.html
@@ -281,8 +281,10 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div id="map"></div>
 
-    <div id="map"></div>
+    </div>
 
     <footer class="footer">
         <div class="container">
